testsuite/poke.pkl/try-catch-diag-4.pk
/* { dg-do compile } */

/* This tests that the emitted diagnostic has the right location.  */

fun foo = int:
  {
   try
     raise Exception {code = 1};
   catch (int e) /* { dg-error "invalid expression.*\n.*expected Exception" } */
   {
     raise Exception {code = e};
   }
   return 666;
  }

fun bar = int:
  {
   try
   return foo;
   catch
   {
     print ("caught exception\n");
   }

   return 0;
  }
